--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
 
     .cart-page-outside {
       border: 10px solid #fbfbfb;
-      background: #c72320
-        url("kaart.png")
-        no-repeat center;
+      background: #c72320 url("kaart.png") no-repeat center;
       background-size: cover;
       width: 100%;
       height: 100%;
@@ -273,25 +271,44 @@
       }
     }
 
-    button.gift{
-        cursor: pointer;
-        background-color: #fff;
-        background-image: url("surprise.png");
-        background-repeat: no-repeat;
-        background-position: center; 
-        background-attachment: fixed;
-        background-size: 8rem;
-        border-radius: 50%;
-        border: none;
-        display: inline-block;
-        height:10rem;
-        width:10rem;
-        transition: all .5s;
+    button.gift {
+      cursor: pointer;
+      background-color: #fff;
+      background-image: url("surprise.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-attachment: fixed;
+      background-size: 8rem;
+      border-radius: 50%;
+      border: none;
+      display: inline-block;
+      height: 10rem;
+      width: 10rem;
+      transition: all 0.5s;
     }
 
-    button.gift.zoomedOut{
-        transition: all .5s;
-        background-size: 4rem;
+    button.gift.zoomedOut {
+      transition: all 0.5s;
+      background-size: 4rem;
+    }
+
+    .gift-card {
+      visibility: hidden;
+      opacity: 0;
+      position: absolute;
+      width: 600px;
+      left: calc(50% - 300px);
+      top: calc(50% - 213px);
+      transition: all 0.5s;
+    }
+
+    .gift-card.active {
+      visibility: visible;
+      opacity: 1;
+    }
+
+    .gift-card img {
+      width: 100%;
     }
   </style>
 
@@ -312,9 +329,9 @@
       <div class="card-page cart-page-outside"></div>
       <div class="card-page cart-page-inside">
         <p style="color: rgb(216, 77, 118)">
-            Gelukkige 33ste verjaardag!<br /><br />
-            Mathias xxx
-          </p>
+          Gelukkige 33ste verjaardag!<br /><br />
+          Mathias xxx
+        </p>
       </div>
     </div>
     <div class="card-page cart-page-bottom">
@@ -322,24 +339,47 @@
     </div>
   </div>
 
+  <div class="gift-card" style="position: absolute">
+    <img src="gift.png" />
+  </div>
+
+  <audio id="lisa" src="lisa.mp3" type="audio/mp3"></audio>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script id="rendered-js">
     $(document).ready(function () {
       var $card = $(".card");
       var $button = $(".gift");
+      var $gift = $(".gift-card");
+      var $lisa = $("#lisa");
+      var isPlaying = false;
+
+      $button.on("click", function (e) {
+        e.stopPropagation();
+        $gift.toggleClass("active");
+      });
+
+      $gift.on("click", function () {
+        $(this).toggleClass("active");
+      });
 
       $card.on("click", function () {
         $(this).toggleClass("is-opened");
+        if (isPlaying) {
+          $lisa.get(0).pause();
+          isPlaying = false
+        } else {
+          $lisa.get(0).play();
+          isPlaying = true
+        }
       });
 
-      function pulse(){
-          $button.toggleClass("zoomedOut")
+      function pulse() {
+        $button.toggleClass("zoomedOut");
         setTimeout(pulse, 500);
       }
 
-      pulse()
-
-
+      pulse();
     });
     //# sourceURL=pen.js
   </script>
