--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
       <div class="card-page cart-page-outside"></div>
       <div class="card-page cart-page-inside">
         <p style="color: rgb(216, 77, 118)">
-          Gelukkige 33ste verjaardag!<br /><br />
-          Mathias xxx
+          Gelukkige 33ste verjaardag allerliefste!!<br /><br />
+          Mathias en de kindjes xxx
         </p>
       </div>
     </div>
